(library
 (name ppx_tools)
 (public_name ppx_tools)
 (wrapped false)
 (libraries compiler-libs.common)
 (modules ast_convenience ast_mapper_class))

(executable
 (name genlifter)
 (public_name genlifter)
 (libraries compiler-libs.common ppx_tools)
 (modules genlifter))

(rule
 (with-stdout-to
  ast_lifter.ml
  (run ./genlifter.exe -I %{ocaml_where} -I %{ocaml_where}/compiler-libs Parsetree.expression)))

(library
 (name ast_lifter)
 (wrapped false)
 (flags :standard -w -17)
 (libraries compiler-libs.common)
 (modules ast_lifter))

(executable
 (name dumpast)
 (public_name dumpast)
 (libraries compiler-libs.common compiler-libs.bytecomp ast_lifter)
 (modules dumpast))

(executable
 (name ppx_metaquot)
 (public_name ppx_metaquot)
 (libraries compiler-libs.common ast_lifter ppx_tools)
 (modules ppx_metaquot))

(executable
 (name rewriter)
 (public_name rewriter)
 (libraries compiler-libs.common)
 (modules rewriter))
