opam-version: "2.0"
synopsis: "Tools for authors of ppx rewriters and other syntactic tools"
maintainer: "alain.frisch@lexifi.com"
authors: [ "Alain Frisch <alain.frisch@lexifi.com>" ]
license: "MIT"
homepage: "https://github.com/ocaml-ppx/ppx_tools"
bug-reports: "https://github.com/ocaml-ppx/ppx_tools/issues"
dev-repo: "git://github.com/ocaml-ppx/ppx_tools.git"
tags: [ "syntax" ]
build: [[make "all"]]
install: [[make "install"]]
depends: [
  "ocaml" {>= "4.08.0"}
  "ocamlfind" {build & >= "1.5.0"}
]
