opam-version: "2.0"
synopsis: "Tools for authors of ppx rewriters and other syntactic tools"
maintainer: "alain.frisch@lexifi.com"
authors: "Alain Frisch <alain.frisch@lexifi.com>"
license: "MIT"
tags: [ "syntax" ]
homepage: "https://github.com/ocaml-ppx/ppx_tools"
bug-reports: "https://github.com/ocaml-ppx/ppx_tools/issues"
dev-repo: "git://github.com/ocaml-ppx/ppx_tools.git"
build: ["dune" "build" "-p" name "-j" jobs
    "@runtest" {with-test}]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.6"}
]
